# Go2_deploy

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  ONBOARDING.md  README.md
.obsidian/: workspace.json
docker/: Dockerfile  README.md  compose.override.yaml.example  compose.yaml
docker/common/: README.md  starship.toml  zshrc
docker/driver/: Dockerfile  README.md  compose.yaml  entrypoint.sh  setup_dds.sh
docker/sim/: Dockerfile  README.md  compose.override.yaml.example  compose.yaml  teleop.sh
docs/: README.md  docker要件定義.md  go2_rl_ros2_overview.md  作業計画.md  手順_Docker動作確認.md  推奨PCスペック.md  解説_外部サブモジュールの使い方.md  解説_自己位置推定のしくみ.md  計画_自己位置推定.md  開発ガイド.md
docs/手順/: Docker動作確認.md  Ubuntuセットアップ.md  Windows-WSL2セットアップ.md  デュアルブート構築.md
docs/解説/: Humble-Jazzy混在DDS警告.md  自己位置推定のしくみ.md
docs/計画/: 経路生成.md  経路追従.md
ros2_ws/launch/: demo.launch.py  tf_map_odom_relay.py
ros2_ws/rviz/: go2_demo.rviz
ros2_ws/src/cmd_vel_safety/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/cmd_vel_safety/cmd_vel_safety/: cmd_vel_safety_node.py
ros2_ws/src/fake_localization_sensors/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/fake_localization_sensors/fake_localization_sensors/: fake_odom_imu_node.py
ros2_ws/src/go2_localization/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/go2_localization/config/: amcl.yaml  ekf.yaml  pointcloud_to_laserscan.yaml
ros2_ws/src/go2_localization/go2_localization/: height_slice_viz.py
ros2_ws/src/go2_localization/launch/: amcl.launch.py  ekf.launch.py  height_slice_viz.launch.py  localization.launch.py  pointcloud_to_laserscan.launch.py
ros2_ws/src/go2_localization/scripts/: relocalize_global.sh  set_initial_pose.sh
ros2_ws/src/go2_path_following/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/go2_path_following/config/: controller_server.yaml
ros2_ws/src/go2_path_following/go2_path_following/: plan_follower.py
ros2_ws/src/go2_path_following/launch/: controller.launch.py
ros2_ws/src/go2_path_following/scripts/: gate1_analyze.py  gate1_measure.sh  send_goal.sh
ros2_ws/src/go2_path_planning/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/go2_path_planning/config/: planner_server.yaml
ros2_ws/src/go2_path_planning/go2_path_planning/: plan_requester.py
ros2_ws/src/go2_path_planning/launch/: planner.launch.py
ros2_ws/src/straight_line_planner/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/straight_line_planner/straight_line_planner/: straight_line_planner_node.py
scripts/: README.md  dev-up.sh  first-run.sh  gate1_analyze.py  gate1_measure.sh  send_goal.sh  ubuntu-clone.sh  ubuntu-setup.sh  windows-setup.ps1  wsl2-setup.sh
