<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cmd_vel_safety</name>
  <version>0.1.0</version>
  <description>
    経路追従計画 M1: 速度・加速度上限クランプと、cmd_velが途絶えたときに
    自動停止するウォッチドッグ(0.5s)を行う中継ノード。
    cmd_vel_raw(Nav2/テレオペ等)を購読し、安全な指令をcmd_vel(ドライバ向け)に配信する。
  </description>
  <maintainer email="koga_koichiro@naoe.eng.osaka-u.ac.jp">koga_koichiro</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
