<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fake_localization_sensors</name>
  <version>0.1.0</version>
  <description>
    自己位置推定 練習用: EKF(robot_localization)の動作確認をGazebo・実機なしで
    行うための、ダミーのOdometry/IMUをpublishするだけの最小ノード。
  </description>
  <maintainer email="kogakou.k@gmail.com">kokko</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
