<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2_path_following</name>
  <version>0.1.0</version>
  <description>
    経路追従 練習(追M2: 平地の経路追従)用のbringupパッケージ。nav2_controller(DWB)の
    設定ファイル+launchファイルと、生成済みPathをFollowPathアクションのゴールとして
    送るだけの小さな橋渡しノード(plan_follower)で構成する。
  </description>
  <maintainer email="koga_koichiro@naoe.eng.osaka-u.ac.jp">koga_koichiro</maintainer>
  <license>Apache-2.0</license>

  <depend>nav2_controller</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>nav2_msgs</depend>
  <depend>rclpy</depend>
  <depend>nav_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
